# threaded-file-finder

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.sh  build_and_run.sh  build_and_run_tests.sh
include/file_finder/: command_runner.h  commands.h  seeker.h  shared_queue.h
src/: CMakeLists.txt
src/file_finder/: command_runner..cpp  main.cpp  seeker.cpp  shared_queue.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt
